--- a/face.html
+++ b/face.html
@@ -17,6 +17,7 @@
 				<a href="keyframes.html">keyframes</a>
 				<a href="timing.html">timing</a>
 				<a href="face.html">drawing</a>
+				<a href="cards.html">Cards</a>
 				<a href="svg.html">SVG animation</a>
 			</nav>
 		</header>
