add missing script

--- a/cards.html
+++ b/cards.html
@@ -77,5 +77,6 @@
 				<img src="https://placekitten.com/360/500" alt="another kitten" class="back">
 			</article>
 		</section>
+		<script src="js/scripts.js"></script>
 	</body>
 </html>
