change section to main to inherit colours properly.
Also changed title.

--- a/cards.html
+++ b/cards.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Some basic examples</title>
+	<title>RotateY</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<link id="stylesheet" rel="stylesheet" href="css/cards.css">
 </head>
 	<body>
 		<header>
-			<h1>Some basic examples</h1>
+			<h1>RotateY</h1>
 			<nav>
 				<a href="index.html">home</a>
 				<a href="basic.html">basics</a>
@@ -21,7 +21,7 @@
 				<a href="svg.html">SVG animation</a>
 			</nav>
 		</header>
-		<section class="cards">
+		<main class="cards">
 			<article class="card">
 				<img src="https://placekitten.com/720/1000" alt="a lovely kitten" class="front">
 				<img src="https://placekitten.com/360/500" alt="another kitten" class="back">
@@ -76,7 +76,7 @@
 				<img src="https://placekitten.com/720/1000" alt="a lovely kitten" class="front">
 				<img src="https://placekitten.com/360/500" alt="another kitten" class="back">
 			</article>
-		</section>
+		</main>
 		<script src="js/scripts.js"></script>
 	</body>
 </html>
